# HCD-AI

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/: pull_request_template.md
.github/workflows/: linting.yaml  python-tests.yaml
backend/: Dockerfile  Makefile  add_admin.py  alembic.ini  main.py  requirements.txt  startup.sh
backend/app/: __init__.py  config.py  database.py  models.py  utils.py
backend/app/auth/: config.py  dependencies.py  routers.py  schemas.py  utils.py
backend/app/chat/: config.py  models.py  routers.py  schemas.py
backend/app/document/: routers.py  schemas.py
backend/app/document_handling/: config.py  models.py  routers.py  schemas.py
backend/app/feedback/: models.py  routers.py  schemas.py
backend/app/history/: routers.py  schemas.py
backend/app/ingestion/: models.py  routers.py  schemas.py  utils.py
backend/app/llm_utils/: completion.py  embeddings.py  prompts.py
backend/app/search/: models.py  (+2 more)
backend/migrations/: env.py
chainlit/: Dockerfile.chainlit  app.py  requirements.txt
chainlit_app/: Dockerfile  Dockerfile.chainlit  README.md  app.py  chainlit.md  config.py  requirements.txt  template.env
chainlit_app/services/: chat_service.py  feedback_service.py  history_service.py
deployment/: README.md
deployment/docker-compose/: docker-compose.dev.yml  docker-compose.yml  run_ollama.sh  template.backend.env
docs/: getting-started.md  hcd_architecture.excalidraw  index.md
docs/components/: chat.md  doc-management.md  index.md
docs/contribute/: dev-setup.md
(+30 files in other folders)
