[tool.poetry]
name = "hcd-ai"
version = "0.1.0"
description = "HEW assistant"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"


[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["google.auth.transport", "google.oauth2", "gunicorn.arbiter", "prometheus_client"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
